# automated_inquiries_processing

./: .dockerignore  .gitignore  ARGOCD_DEMO.md  CLEANUP_PLAN.md  CNCF_SERVICES_GUIDE.md  LICENSE  MACOS_SETUP_GUIDE.md  PROJECT_SUMMARY.md  README.md  access-services.sh  docker-compose.yml  env.example  inquiry_monitoring_dashboard.py  keep-port-forwards-alive.sh  pyproject.toml  pytest.ini  setup-all.sh  start-bulletproof.sh  start-linux.sh  start-macos.sh  start-services.sh  stop-cncf.sh  stop-services.sh  stop.sh  test-services.sh
airflow/dags/: batch_classify.py  batch_classify_simple.py  daily_ingestion.py  model_retrain.py
config/: routing_rules.yaml
data/: generate_mock_data.py
data/raw/: sample_inquiries.csv  sample_inquiries.json
deployment/: docker-compose-cncf.sh  local-k8s-setup.sh  terraform-deploy.sh
deployment/config/: production.env  staging.env
deployment/scripts/: build_push.sh  deploy.sh  teardown.sh
deployment/terraform/: kubernetes-only.tf  main.tf  terraform.tfvars  terraform.tfvars.example  variables.tf
docker/: airflow-ml.Dockerfile  airflow.Dockerfile  api.Dockerfile  dashboard.Dockerfile  fastapi-app.Dockerfile  mlflow.Dockerfile  streamlit-app.Dockerfile
docs/: API.md  ARCHITECTURE.md  CLEANUP_PLAN.md  DEPLOYMENT.md  DIRECTORY_STRUCTURE.md  FINAL_SETUP_SUMMARY.md  KUBERNETES_DEPLOYMENT.md  MACOS_SETUP_GUIDE.md  MONITORING.md  PROJECT_SUMMARY.md  QUICK_START.md  SECURITY.md
k8s/: deploy-k8s.sh
k8s/airflow/: airflow-setup.yaml  (+4 more)
scripts/: demo_api_integration.py  init-databases.sql  init_db.py  load_mock_data.py  process_unprocessed.py  setup.sh  setup_bert_tracking.py  setup_demo.py  setup_grafana.py  setup_grafana_dashboards.py  setup_mlflow.py  setup_mlflow_analytics_simple.py  setup_mlflow_simple.py  test_api.sh  test_bert_models.py
src/: mlflow_config.py  schemas.py
tests/: conftest.py
(+47 files in other folders)
